--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Belly Button Biodiversity</title>
-  <link 
-    rel="stylesheet" 
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link 
-  rel ="stylesheet" 
-  href="static/css/style.css">
+  <title>Bellybutton Biodiversity</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
-
+  <div>
+    <p><a href="https://joekell.github.io/PlotlyBiodiversityChallenge/README/" target="_blank">Look at the README for this project</a></p>
+    <p><a href="https://joekell.github.io/" target="_blank">View my GitHub Portfolio</a></p>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
@@ -23,10 +21,9 @@
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
-    
     <div class="row">
       <div class="col-md-2">
-          <div class="well">
+        <div class="well">
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
@@ -37,7 +34,6 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      
       <div class="col-md-5">
         <div id="bar"></div>
       </div>
@@ -54,9 +50,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./JS/charts.js"></script>
-
-
+  <script src="./static/js/app.js"></script>
+  <script src="data/samples.json"></script>
+  <script src="static/js/app.js"></script>
 </body>
 
 </html>
