--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="app.js"></script>
   <script src="JS/charts.js "></script>
+  <script src="JS/charts.js "></script>
   
 </body>
 
